Fix styling of input-group alignment

--- a/packages/core-components/src/components/input-group/input-group.scss
+++ b/packages/core-components/src/components/input-group/input-group.scss
@@ -3,7 +3,7 @@
 :host {
   .b2b-input-wrapper {
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     flex: 0 0 auto;
     max-width: 800px;
   }
